<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/frag2_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p1" />

        <TextView
            android:id="@+id/frag2_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p2" />

        <TextView
            android:id="@+id/frag2_text2.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p2.5"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/frag2_text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p3" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab2_pic1" />

        <TextView
            android:id="@+id/frag2_caption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/c2cap1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/frag2_text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p4" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab2_pic2" />

        <TextView
            android:id="@+id/frag2_caption2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/c2cap2"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/frag2_text4.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p4.5"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/frag2_text5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p5" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab2_pic3" />

        <TextView
            android:id="@+id/frag2_caption3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/c2cap3"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/frag2_text6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p6" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab2_pic4" />

        <TextView
            android:id="@+id/frag2_caption4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/c2cap4"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/frag2_text7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p7" />

        <TextView
            android:id="@+id/frag2_text7.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p7.5"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/frag2_text8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p8" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab2_pic6" />
        <TextView
            android:id="@+id/frag2_caption5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/c2cap5"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/frag2_text9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c2p9" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab2_pic5" />
        
        <TextView
            android:id="@+id/frag2_caption6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/c2cap6"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/frag2_text10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30sp"
            android:text="@string/c2p10" />
    </LinearLayout>

</ScrollView>