<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        
        <TextView 
            android:id="@+id/frag3_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c3p1"
            />
        
        <TextView 
            android:id="@+id/frag3_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/c3p2"
            android:textSize="20sp"
            />
        
        <LinearLayout
            android:id="@+id/listFrame"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">
            
        </LinearLayout>
        
        <TextView 
            android:id="@+id/c3p4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/c3p4"
            android:textSize="20sp"
            android:layout_margin="8dp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            />
        
        <ImageView 
            android:id="@+id/frag3_image1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab3_pic1"
            />
        
    </LinearLayout>

</ScrollView>