<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingBottom="30sp" >

        <TextView
            android:id="@+id/frag1_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:text="@string/c1p1" />

        <ImageView
            android:id="@+id/frag1_image1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frag1_text1"
            android:layout_margin="8dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/tab1_pic1" />
        
        <TextView
            android:id="@+id/frag1_caption1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frag1_image1"
            android:gravity="center_horizontal"
            android:text="@string/c1cap1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/frag1_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/frag1_caption1"
            android:layout_marginBottom="30sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30sp"
            android:text="@string/c1p2" />
        

    </RelativeLayout>

</ScrollView>